--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </div>
     <div class="choices">
       <div class="choice" id="r">
-        <img src="images/rock.png" alt="" width="150" height="150">
+        <img src="images/rock.png" alt="Rock" width="150" height="150">
       </div>
       <div class="choice" id="p">
-        <img src="images/paper.png" alt="" width="150" height="150">
+        <img src="images/paper.png" alt="Paper" width="150" height="150">
       </div>
       <div class="choice" id="s">
-        <img src="images/Scissors.png" alt="" width="150" height="150">
+        <img src="images/scissors.png" alt="Scissors" width="150" height="150">
       </div>
     </div>
     <p id="action-message">Make your move.</p>
